# iwfm-docker

./: .gitignore  Dockerfile  Dockerfile.afagt  Dockerfile.afmgr  Dockerfile.agent  Dockerfile.airflow  Dockerfile.analysis  Dockerfile.db  Dockerfile.local  Dockerfile.manager  Dockerfile.pagt  Dockerfile.pmgr  Dockerfile.post  Dockerfle.pagt  README.md  airflow_agt.sh  airflow_mgr.sh  build.sh  compass.yml  init.sh  library.sh  run.sh  run_model.sh  run_simulation.sh  start-dev.sh  start.sh
iwfm/: .gitignore  CMakeLists.txt  CmakeLibraryMacro.txt  setup_linux_intelcompilers_32bit.sh
iwfm/SourceCode/Budget/: Budget.f90  BudgetControls.f90
iwfm/SourceCode/IWFM_Core_Version/: IWFM_Core_Version.f90  Revision.fi
iwfm/SourceCode/Package_AppGW/: Class_AppGW.f90  Class_BaseHydrograph.f90  Class_GWState.f90  Class_TecplotOutput.f90  GWHydrograph.f90  Package_AppGW.f90  VerticalFlow.f90
iwfm/SourceCode/Package_AppLake/: Class_BaseAppLake.f90  Class_Lake.f90  Package_AppLake.f90  Package_AppLake_Revision.fi
iwfm/SourceCode/Package_AppPumping/: Class_ElementPumping.f90  Class_Pumping.f90  Class_PumpsAtElem.f90  Class_Well.f90  Package_AppPumping.f90
iwfm/SourceCode/Package_AppSmallWatershed/: Package_AppSmallWatershed.f90
iwfm/SourceCode/Package_AppStream/: Class_AppDiverBypass.f90  Class_BaseAppStream.f90  Class_Bypass.f90  Class_Diversion.f90  Class_ElemToRecvLoss.f90  Class_RechargeZone.f90  Class_StrmInflow.f90  Class_StrmNode.f90  Class_StrmNodeBudget.f90  Class_StrmReach.f90  Class_StrmState.f90  Package_AppStream.f90  Package_AppStream_Revision.fi  StrmHydrograph.f90
iwfm/SourceCode/Package_AppSubsidence/: Class_BaseAppSubsidence.f90  Package_AppSubsidence.f90
iwfm/SourceCode/Package_AppTileDrain/: AppTileDrain_Parameters.f90  Class_BaseTileDrain.f90  Package_AppTileDrain.f90  TileDrainHydrograph.f90
iwfm/SourceCode/Package_AppUnsatZone/: Package_AppUnsatZone.f90
iwfm/SourceCode/Package_Budget/: Budget_Parameters.f90  Class_Budget.f90  Class_BudgetInputFile.f90  Package_Budget.f90  Package_Budget_Revision.fi
iwfm/SourceCode/Package_ComponentConnectors/: LakeGWConnector.f90  Package_ComponentConnectors.f90  Package_ComponentConnectors_Revision.fi  StrmLakeConnector.f90  SupplyDestinationConnector.f90
iwfm/SourceCode/Package_Discretization/: Class_AppFace.f90  Class_AppGrid.f90  Class_Grid.f90  Class_Stratigraphy.f90  Package_Discretization.f90  Package_Discretization_Revision.fi  ParametricGrid.f90
iwfm/SourceCode/Package_GWZBudget/: Class_GWZBudget.f90  GWZBudget_Parameters.f90  Package_GWZBudget.f90
iwfm/SourceCode/Package_Matrix/: Lubksb.f90  Ludcmp.f90  Package_Matrix.f90  Package_Matrix_Revision.fi  pgmres.f
iwfm/SourceCode/Package_Miscellaneous/: AbstractFunction.f90  Class_BaseHydrograph.f90  Class_GeneralHeadBoundary.f90  Class_PairedData.f90  Class_SolverData.f90  Class_TecplotOutput.f90  Opening_screen.f90  Opening_screen_LINUX.f90  Opening_screen_WINDOWS.f90  Package_Misc.f90  Package_Misc_Revision.fi  TSDFileHandler.f90
iwfm/SourceCode/Package_Model/: Class_Model_ForInquiry.f90  Package_Model.f90
iwfm/SourceCode/Package_PrecipitationET/: Class_AtmosphericData.f90  Package_PrecipET_Revision.fi  Package_PrecipitationET.f90
iwfm/SourceCode/Package_RootZone/: Class_BaseRootZone.f90  Class_GenericLandUse.f90  Class_GenericMoistureData.f90  Class_LandUseDataFile.f90  Package_RootZone.f90  Package_RootZone_Revision.fi  Util_Package_RootZone.f90
iwfm/SourceCode/Package_Supply/: Class_IrigFracFile.f90  Package_Supply.f90  SupplyAdjustment.f90
iwfm/SourceCode/Package_UnsatZone/: Class_Soil.f90  Package_UnsatZone.f90  Package_UnsatZone_Revision.fi  RainfallRunoff.f90  UnsatZoneOps.f90
iwfm/SourceCode/Package_ZBudget/: Class_SystemData.f90  Class_ZBudget.f90  Class_ZBudgetHeader.f90  Class_ZoneList.f90  Package_ZBudget.f90  Package_ZBudget_Revision.fi  ZBudget_Parameters.f90  ZBudget_Util.f90
iwfm/SourceCode/PreProcessor/: Iwfm_f1.f90
iwfm/SourceCode/SharedLibrary/: IWFM_Budget_Exports_C.f90  IWFM_Misc_Exports_C.f90  IWFM_Model_Exports_C.f90  IWFM_ZBudget_Exports_C.f90
iwfm/SourceCode/Simulation/: Iwfm_f2.f90
iwfm/SourceCode/Simulation_MM/: Coarray_Debugging_Mod.f90  IWFM_f2_MM.f90
iwfm/SourceCode/ZBudget/: ZBudgetControls.f90  ZBudget_Main.f90
iwfm/SourceCode/heclib/: heclib_ivf_debug_x64.lib
iwfm2obs/: CMakeLists.txt  iwfm2obs_2015.sln  iwfm2obs_2017.vfproj
iwfm2obs/Src/: Modules.f90  UpgradeLog.htm  iwfm2obs_2015.f90  iwfm2obs_2017.f90
mlt/: CMakeLists.txt  MultiLayerTarget.f90  MultiLayerTarget.sln  MultiLayerTarget.vfproj  Tools.f90
t2p/: CMakeLists.txt  KDTree.f90  Readme.txt  T2P.APS  Texture2Par.f90  Texture2Par.sln  Texture2Par.vfproj  Tools.f90  fpath.f90  mfsupport.f90  resource.h
t2p/Src/: MakePar.f90  T2P.rc  readIWFM.f90  spkrige.f90  writeLPF.f90
t2p/Src/mfUSGLib/: Readme.txt  mf_t2p.f90
t2p/mfUSGLib/Debug/: addiaja_gncb__genmod.f90  addiaja_gncn__genmod.mod  ats1ad__genmod.mod  ats1rp__genmod.f90  calc_unsat_infil__genmod.f90  calcunsatflobot__genmod.f90  clear_modflow_memory__genmod.f90  cln1bdgwfwr__genmod.mod  cln1bds__genmod.f90  cln1fm__genmod.f90  cln1fm__genmod.mod  cln1rp__genmod.f90  clnpw__genmod.f90  clnpw__genmod.mod  clnv__genmod.mod  ddf1ad__genmod.mod  ddf1da__genmod.f90  ddf1fm__genmod.mod  degree__genmod.mod  dwadifn__genmod.f90  fillgfu__genmod.mod  fillia__genmod.f90  findtop__genmod.f90  finterp__genmod.f90  first_active_below2__genmod.f90  flowterp__genmod.f90  fnroot__genmod.f90  genrcm__genmod.f90  getapk12__genmod.f90  glo2sgbu1bd__genmod.mod  glo2sgbu1fm__genmod.mod  gncb2disu1ar__genmod.f90  gncn2disu1ar__genmod.f90  gncn2disu1ar__genmod.mod  gncn2disu1fm__genmod.mod  gncnmodule.mod  gradtermp__genmod.f90  gwf2bas7ad__genmod.f90
tools/heclib/: CMakeLists.txt  buildInfo.h  build_unix.sh  heclib.h  linux-build-ifort-truncated.sh
tools/heclib/dc/: bits.f  sd32r.f
tools/heclib/dss/: cancelProcess.f  dssClearStatus.f  dssProcessStatus.f  (+90 more)
tools/iwfm/: CMakeLists.txt  CmakeLibraryMacro.txt
tools/mfUSGLib/: CMakeLists.txt  Readme.txt  mfUSGLib.sln  mfUSGLib.vfproj  mf_t2p.f90
(+1112 files in other folders)
